Creando nueva seccion sobre estudio actual

--- a/introduction_to_web_development/modules/collaborative_work_and_github_pages/challenge/index.html
+++ b/introduction_to_web_development/modules/collaborative_work_and_github_pages/challenge/index.html
@@ -180,6 +180,21 @@
       </div>
     </section>
 
+    <hr size="6px">
+
+    <section>
+        <div class="row justify-content-center">  
+            <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-center px-3">
+                <img src="assets/images/desafiolatam_principal-031aadc574e79866fac011f0e4dae20b0d891d220e593b203b39568a495b894c.jpeg" class="img-fluid" alt="imagen-desafio-latam">
+                </div>
+                <h1 class="text-center px-3 mt-2">Actualmente estoy estudiando Desarrollo Web en Desafío Latam</h1>
+            </div>
+        </div>
+    </section>
+
+    <hr size="6px">
+
     <section class="contact text-dark">
       <div class="container">
         <div class="text-center">
@@ -213,7 +228,7 @@
       </div>
     </section>
 
-   <footer class="py-4 text-center text-white">
+    <footer class="py-4 text-center text-white">
       <div class="container"><small class="pre-wrap">Copyright © Meraki 2022 </small></div>
     </footer>
 
